# automaton

./: COPYING  README.md  meson.build  meson_options.txt
meson/: install.py
res/presets/about/: about.life
res/presets/guns/: glider_gun.life
res/presets/logic/: not0.life  not1.life
res/presets/methuselahs/: acorn.life  bunnies.life  die_hard.life  r-pentomino.life
res/presets/oscillators/: beacon.life  blinker.life  penta_decathlon.life  pulsar.life  toad.life
res/presets/puffers/: puffer_1.life
res/presets/spacefillers/: max.life
res/presets/spaceships/: 60P5H2V0.life  canada_goose.life  glider.life  hwss.life  lwss.life  mwss.life
res/presets/still_lifes/: bee_hive.life  block.life  boat.life  cthulhu.life  loaf.life  tub.life
src/: meson.build
src/automaton/config/: Conf.java
src/automaton/decoder/: Decoder.java
src/automaton/grid/: Cell.java  Chunk.java  World.java
src/automaton/io/: Console.java  Resource.java
src/automaton/main/: Automaton.java  Main.java
src/automaton/maths/: Coordinates.java  Point.java  Vector.java
src/automaton/render/: RenderingContext.java
src/automaton/tests/: Failure.java  MainTest.java  Printer.java  TestCase.java  TestSuite.java
src/automaton/tests/grid/: CellTest.java  ChunkTest.java  EvolutionTest.java  WorldTest.java
src/automaton/tests/maths/: CoordinatesTest.java  PointTest.java
src/automaton/ui/menu/: AboutMenu.java  EditMenu.java  FileMenu.java  ImportMenu.java
src/automaton/ui/widget/: Canvas.java  MenuBar.java  Window.java
